--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,7 +7,8 @@ requires-python = ">=3.12"
 dependencies = [
   "fastapi>=0.115.0",
   "uvicorn>=0.30.0",
-  "pydantic>=2.8.0"
+  "pydantic>=2.8.0",
+  "python-multipart>=0.0.7",
 ]
 
 [project.optional-dependencies]
@@ -17,6 +18,9 @@ test = [
   "pytest-asyncio",
   "requests-mock",
   "fakeredis",
+  "openapi-core>=0.19.0",
+  "flake8",
+  "httpx",
 ]
 
 [tool.uv]
