--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "crypto-analytics-frontend",
   "private": true,
@@ -8,7 +7,10 @@
     "build": "next build",
     "start": "next start -p ${FRONTEND_PORT:-3000}",
     "lint": "eslint .",
-    "test": "echo \"(placeholder) run Playwright/Jest tests\" && exit 0"
+    "test": "vitest run --coverage",
+    "test:watch": "vitest",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "next": "14.2.5",
@@ -16,8 +18,16 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@vitejs/plugin-react": "^5.0.2",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "9.5.0",
     "eslint-config-next": "14.2.5",
-    "prettier": "3.3.3"
+    "jsdom": "^27.0.0",
+    "msw": "^2.11.2",
+    "prettier": "3.3.3",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.4"
   }
 }
