test(e2e): add Playwright user journey tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,7 @@ jobs:
         run: cd frontend && pnpm install
       - name: Run tests
         run: make test
+      - name: Run e2e tests
+        run: cd frontend && pnpm test:e2e
+        env:
+          PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
