--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
   "uvicorn>=0.30.0",
   "pydantic>=2.8.0",
   "python-multipart>=0.0.7",
+  "redis>=5.0.0",
 ]
 
 [project.optional-dependencies]
