--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
   "pydantic>=2.8.0",
   "python-multipart>=0.0.7",
   "redis>=5.0.0",
+  "sqlalchemy>=2.0.29",
+  "aiosqlite>=0.19.0",
 ]
 
 [project.optional-dependencies]
