--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
   "redis>=5.0.0",
   "sqlalchemy>=2.0.29",
   "aiosqlite>=0.19.0",
+  "httpx>=0.27.0",
 ]
 
 [project.optional-dependencies]
@@ -23,7 +24,6 @@ test = [
   "fakeredis",
   "openapi-core>=0.19.0",
   "flake8",
-  "httpx",
 ]
 
 [tool.uv]
