--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,3 +10,8 @@ coverage==7.10.6
 fakeredis==2.31.1
 redis==6.4.0
 sortedcontainers==2.4.0
+attrs==25.3.0
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+referencing==0.36.2
+rpds-py==0.27.1
